@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - Use filesets to find files
           - Make various delegates return their target
 
 0.017     2025-03-11 21:53:17+01:00 Europe/Brussels
